changed fonts for sidebar

--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -1,4 +1,5 @@
 /** @format */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 nav {
   position: Fixed;
@@ -63,6 +64,7 @@ nav {
   white-space: nowrap; 
   overflow: hidden; 
   text-overflow: ellipsis; 
+  font-family: 'Poppins', sans-serif;
 }
 
 .nav-link:hover {
