--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
 html,
 body,
 #root,
@@ -13,8 +11,8 @@ body,
 .content {
   height: 100%;
   width: 100%;
-  font-family: "HelveticaNeue", sans-serif;
-  background-color: #f7f9f9;
+  font-family: "Poppins", sans-serif;
+  background-color: #fefefe;
   color: black;
 }
 
@@ -23,37 +21,35 @@ body,
   position: relative;
 }
 
-*{
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	font-family: 'Open Sans', sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
-.App{
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	height: 100vh;
+.App {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
 }
 
-
-.page{
-	flex-basis: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: margin-left 1s;
+.page {
+  flex-basis: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: margin-left 1s;
 }
 
-.page-with-navbar{
-	margin-left: 15%;
+.page-with-navbar {
+  margin-left: 15%;
 }
 
-@media only screen and (max-width: 768px){
-	.page-with-navbar{
-		width: 100%;
-		margin-left: 0;
-	}
-
+@media only screen and (max-width: 768px) {
+  .page-with-navbar {
+    width: 100%;
+    margin-left: 0;
+  }
 }
