--- a/src/sidebar.css
+++ b/src/sidebar.css
@@ -8,7 +8,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 15%;
+  width: 190px;
   height: 100%;
   background-color: #000;
   padding: 4rem 1rem 1rem 1rem;
