--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -53,10 +53,11 @@
 }
 
 .custom-profile-details {
-  margin-left: 30px; /* Adjust the value as needed */
+  margin-left: 30px;
 }
 
 .input-text {
+  margin-left: -25px;
   margin-bottom: 15px;
   font-size: 18px;
   font-family: "Poppins", sans-serif;
@@ -64,7 +65,7 @@
 
 .input-field {
   width: 100%;
-  padding: 12px; /* Add padding to the input field */
+  padding: 12px;
   border: 1px solid #ccc;
   border-radius: 8px;
   margin-top: 15px;
@@ -108,7 +109,7 @@
 }
 
 .cancel-button {
-  margin-left: 80px;
+  margin-left: 50px;
   scroll-margin-right: 18px;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
@@ -122,8 +123,8 @@
 }
 
 .edit-button {
-  margin-left: 455px;
-  margin-top: 35px;
+  margin-left: 400px;
+  margin-top: -65px;
   scroll-margin-right: 18px;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
@@ -136,17 +137,43 @@
   transition: background-color 0.3s ease;
 }
 
+/* ADMIN PROFILE SETTINGS */
 .profile-picture-label {
   display: inline-block;
   cursor: pointer;
 }
-
-.profile-picture {
+.admin-picture {
   width: 200px;
   height: 200px;
   border-radius: 50%; /* Create a circular shape */
   border: 2px solid #ddd;
   cursor: pointer;
+  transition: border-color 0.3s ease;
+}
+
+/* company PROFILE SETTINGS */
+.company-pic {
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  transition: margin-left 0.3s ease;
+}
+/* Company picture when EDIT PROFILE IS  CLICKED */
+.company-picture.editing {
+  width: 450px;
+  height: 450px;
+  border-radius: 50%;
+  border: 2px solid #ddd;
+  margin-left: 90px;
+}
+/* Company picture when EDIT PROFILE IS NOT CLICKED */
+.company-picture {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  border: 2px solid #ddd;
+  cursor: pointer;
+  margin-left: 150px;
   transition: border-color 0.3s ease;
 }
 
