--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -181,12 +181,12 @@
   border-color: #aaa;
 }
 
-.circular-profile {
+/* .circular-profile {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   border: 2px solid #ddd;
-}
+} */
 
 .admin-image-container {
   display: flex;
@@ -198,4 +198,33 @@
   width: 40px; /* Adjust the width as needed */
   height: auto;
   margin-left: 10px; /* Add some spacing between the admin label and the image */
+}
+
+.circular-profile {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 2px solid #ddd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: border-color 0.3s ease;
+}
+
+.admin-picture {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+}
+
+.profile-picture-text {
+  font-size: 12px;
+  font-family: "Poppins", sans-serif;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
