--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body,
   height: 100%;
   width: 100%;
   font-family: "HelveticaNeue", sans-serif;
-  background-color: #f7f9f9;
+  background-color: #d4d4d4;
   color: black;
 }
 
