--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -2,6 +2,12 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
+/* .App{ 
+  width: 100%;
+  height: 100%;
+  background-color: #d4d4d4;
+} */
+
 /* Dashboard Text */
 .dashboard-title {
   font-size: 32px;
