--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 nav {
-  position: Fixed;
+  position: fixed;
   top: 50px;
   left: 0;
   display: flex;
@@ -96,7 +96,7 @@ nav {
   margin: 10px 15px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 400px) {
   nav {
     width: 40%;
     padding: 10px;
@@ -104,7 +104,7 @@ nav {
   }
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 10px) {
   .mobile-nav {
     display: flex;
     align-items: center;
