--- a/src/index.css
+++ b/src/index.css
@@ -29,10 +29,11 @@ body,
 }
 
 .App {
+  flex-basis: 100%;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100vh;
+  transition: margin-left 1s;
+  background-color: #d4d4d4;
 }
 
 .page {
@@ -41,6 +42,7 @@ body,
   justify-content: center;
   align-items: center;
   transition: margin-left 1s;
+  background-color: #d4d4d4;
 }
 
 .page-with-navbar {
