--- a/src/css/sorter.css
+++ b/src/css/sorter.css
@@ -1,11 +1,10 @@
 /** @format */
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-/* Table - Header*/
+
 .table-header {
   background-color: #512615;
   color: white;
-  text-align: left;
   font-size: 16px;
 }
 
@@ -19,6 +18,7 @@
 
 .sorters-table {
   width: 1000px;
+  text-align: center;
 }
 
 .search-bar {
@@ -31,12 +31,11 @@
   background-color: #f2f2f2;
   font-size: 16px;
   color: #333;
-  text-align: left;
 }
 
 .sort-table td {
   padding: 12px;
-  padding-left: 22px;
+  /* padding-left: 22px; */
 }
 
 .sort-table .see-more-button {
