--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -5,10 +5,11 @@ nav {
   position: fixed;
   top: 50px;
   left: 0;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 190px;
+  /* width: 190px; */
   height: 100%;
   background-color: #000;
   padding: 4rem 1rem 1rem 1rem;
@@ -97,11 +98,11 @@ nav {
 }
 
 @media only screen and (max-width: 400px) {
-  nav {
-    width: 40%;
+  /* nav {
+    width: 50%;
     padding: 10px;
     height: 100%;
-  }
+  } */
 }
 
 @media only screen and (max-width: 10px) {
@@ -119,6 +120,7 @@ nav {
     display: none;
   }
 }
+
 .collapsed {
   width: 65px;
 }
