--- a/src/css/topbar.css
+++ b/src/css/topbar.css
@@ -5,7 +5,7 @@
 .poppins-font {
   font-family: "Poppins", sans-serif;
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 600px) {
   .mobile-nav {
     display: flex;
     align-items: center;
@@ -22,12 +22,21 @@
     outline: none;
     border: none;
     top: 100px;
-    margin: 10px 15px;
+    margin: 120px 15px;
+  }
+  .logo-title{
+    margin-left: 30%;
+  }
+  .icon-logo {
+    margin-right: 35px;
   }
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 800px) {
   .admin-user{
     display: none;
+  }
+  .icon-logo {
+    margin-right: 35px;
   }
 }
