--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  background-color: #d4d4d4;
+}
+
 html,
 body,
 #root,
@@ -12,7 +16,7 @@ body,
   height: 100%;
   width: 100%;
   font-family: "HelveticaNeue", sans-serif;
-  background-color: #d4d4d4;
+  /* background-color: #d4d4d4; */
   color: black;
 }
 
@@ -30,22 +34,57 @@ body,
 
 .App {
   display: flex;
+  flex-basis: 100%;
+  /* height: max-content; */
   flex-direction: column;
   transition: margin-left 1s;
-  background-color: #d4d4d4;
+  /* background-color: #d4d4d4; */
 }
 
 .page {
   flex-basis: 100%;
+  /* height: 100%; */
+  width:100%;
   display: flex;
+  position: absolute;
   justify-content: center;
+  /* margin-right: 100px; */
   align-items: center;
   transition: margin-left 1s;
-  background-color: #d4d4d4;
+  /* background-color: #d4d4d4; */
 }
 
 .page-with-navbar {
   margin-left: 15%;
+}
+
+@media (max-width: 700px) {
+
+  #root {
+    height: max-content;
+    width: 100%;
+    font-family: "HelveticaNeue", sans-serif;
+    /* background-color: #d4d4d4; */
+    color: black;
+  }
+
+  .App {
+    display: flex;
+    /* height: max-content; */
+    flex-direction: column;
+    transition: margin-left 1s;
+    /* background-color: #d4d4d4; */
+  }
+  .page {
+    flex-basis: 100%;
+    display: flex;
+    position: absolute;
+    margin-right: 100px;
+    justify-content: center;
+    align-items: center;
+    transition: margin-left 1s;
+    /* background-color: #d4d4d4; */
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -53,4 +92,5 @@ body,
     width: 100%;
     margin-left: 0;
   }
+  
 }
