--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body,
 #root,
 .app,
 .content {
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   font-family: "HelveticaNeue", sans-serif;
   /* background-color: #d4d4d4; */
