--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
+body {
   background-color: #d4d4d4;
 }
 
@@ -20,7 +20,7 @@ body,
   color: black;
 }
 
-#root{
+#root {
   min-height: 100vh;
 }
 
@@ -48,7 +48,7 @@ body,
 .page {
   flex-basis: 100%;
   /* height: 100%; */
-  width:100%;
+  width: 100%;
   display: flex;
   position: absolute;
   justify-content: center;
@@ -63,7 +63,6 @@ body,
 }
 
 @media (max-width: 700px) {
-
   #root {
     height: max-content;
     width: 100%;
@@ -91,10 +90,19 @@ body,
   }
 }
 
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 768px) {
   .page-with-navbar {
     width: 100%;
     margin-left: 0;
   }
-  
+} */
+
+/* For screens smaller than a certain breakpoint (e.g., 640px), use a different layout */
+@media (max-width: 640px) {
+  .grid-cols-4 {
+    grid-template-columns: repeat(
+      1,
+      minmax(0, 1fr)
+    ); /* Change to a 1-column layout for mobile */
+  }
 }
