--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,16 @@
 
 body {
   background-color: #d4d4d4;
+
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 html,
-body,
-#root,
-.app,
 .content {
-  /* height: 100%; */
+  height: 100%;
   width: 100%;
   font-family: "HelveticaNeue", sans-serif;
-  /* background-color: #d4d4d4; */
   color: black;
 }
 
@@ -42,7 +41,6 @@ body,
   /* height: max-content; */
   flex-direction: column;
   transition: margin-left 1s;
-  /* background-color: #d4d4d4; */
 }
 
 .page {
@@ -55,54 +53,15 @@ body,
   /* margin-right: 100px; */
   align-items: center;
   transition: margin-left 1s;
-  /* background-color: #d4d4d4; */
 }
 
 .page-with-navbar {
   margin-left: 15%;
 }
 
-@media (max-width: 700px) {
-  #root {
-    height: max-content;
-    width: 100%;
-    font-family: "HelveticaNeue", sans-serif;
-    /* background-color: #d4d4d4; */
-    color: black;
-  }
-
-  .App {
-    display: flex;
-    /* height: max-content; */
-    flex-direction: column;
-    transition: margin-left 1s;
-    /* background-color: #d4d4d4; */
-  }
-  .page {
-    flex-basis: 100%;
-    display: flex;
-    position: absolute;
-    margin-right: 100px;
-    justify-content: center;
-    align-items: center;
-    transition: margin-left 1s;
-    /* background-color: #d4d4d4; */
-  }
-}
-
-/* @media only screen and (max-width: 768px) {
-  .page-with-navbar {
-    width: 100%;
-    margin-left: 0;
-  }
-} */
-
 /* For screens smaller than a certain breakpoint (e.g., 640px), use a different layout */
-@media (max-width: 640px) {
+@media (max-width: 700px) {
   .grid-cols-4 {
-    grid-template-columns: repeat(
-      1,
-      minmax(0, 1fr)
-    ); /* Change to a 1-column layout for mobile */
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
