--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -2,45 +2,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 nav {
-  position: fixed;
-  top: 50px;
-  left: 0;
-  z-index: 1;
-  display: flex;
+  z-index: 2;
   flex-direction: column;
   justify-content: space-between;
-  /* width: 190px; */
-  height: 100%;
+  height: 100vh;
   background-color: #000;
   padding: 4rem 1rem 1rem 1rem;
-  /* transition: transform 1s; */
 }
 
 .navbar {
   transform: translateX(-100%);
 }
 
-.nav-btn {
-  position: absolute;
-  transform: translateX(38px);
-  top: 10px;
-  right: 0;
-  width: 40px;
-  height: 60px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #000;
-  outline: none;
-  border: none;
-  font-size: 1rem;
-  padding: 5px 10px;
-  cursor: pointer;
-  color: #c2bbb8;
-}
-
+/* 
 .logo {
   display: block;
   width: 100px;
@@ -52,7 +26,7 @@ nav {
   display: block;
   width: 100%;
   height: 100%;
-}
+} */
 
 .nav-link {
   display: flex;
