--- a/src/css/receipt.css
+++ b/src/css/receipt.css
@@ -1,3 +1,7 @@
+.Page {
+  margin-top: 100px; /* Adjust the value as needed */
+}
+
 /* Container for the whole receipt */
 .whole-receipt {
   display: flex;
@@ -158,13 +162,6 @@
   font-size: 12px;
   font-family: "Poppins", sans-serif;
 }
-
-/* Convert button */
-.convert-button {
-  text-align: center;
-  margin-top: 10px;
-}
-
 /* assisted by */
 .receipt-assisted {
   margin-bottom: 20px;
@@ -174,3 +171,65 @@
   align-items: center;
 }
 
+/* Convert button */
+.convert-button {
+  text-align: center;
+  margin-top: 10px;
+}
+
+/* White box for PDF options */
+.white-box {
+  width: 200px;
+  height: 210px;
+  background-color: white;
+  position: relative;
+  right: -1035px;
+  top: -500px;
+  border: 1px solid #adadad;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 12px;
+  z-index: 100;
+}
+
+/* Greetings to Customer */
+.white-box-greeting {
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Customer Name */
+.bold-customer-id {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+/* Box for pdf button */
+.white-box-text {
+  font-size: 12px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Custom button styling */
+.custom-button {
+  margin-top: 10px;
+  background-color: #50C878;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Custom button hover effect */
+.custom-button:hover {
+  background-color: #097969;
+}
