--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -56,7 +56,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   margin-top: 5px;
-  color: #000000;
+  /* color: #000000; */
   /* margin-left: 63px; */
 }
 
@@ -64,7 +64,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 25px;
   margin-top: 20px;
-  color: #000000;
+  /* color: #000000; */
   /* margin-left: 63px; */
 }
 
