--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -6,7 +6,7 @@ nav {
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
-  background-color: #000;
+  /* background-color: #000; */
   padding: 4rem 1rem 1rem 1rem;
 }
 
@@ -30,19 +30,24 @@ nav {
 
 .nav-link {
   display: flex;
-  align-items: center;
-  color: #fff;
+  /* align-items: center; */
+  /* color: #fff; */
   text-decoration: none;
   padding: 10px 1rem;
   border-radius: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
+.active-link {
+  background-color: #4d4f55;
+  color: #000;
+}
+
 .nav-link:hover {
-  background-color: #808080;
+  background-color: #292a2d;
   color: #fff;
 }
 
