--- a/src/css/topbar.css
+++ b/src/css/topbar.css
@@ -1,7 +1,5 @@
 /** @format */
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
-
 .poppins-font {
   font-family: "Poppins", sans-serif;
 }
@@ -15,7 +13,7 @@
     display: none;
     margin-top: 4.2rem;
   }
-  
+
   .mobile-nav-btn {
     color: #fff;
     background: transparent;
@@ -24,7 +22,7 @@
     top: 100px;
     margin: 120px 15px;
   }
-  .logo-title{
+  .logo-title {
     margin-left: 20%;
   }
   .icon-logo {
@@ -33,10 +31,20 @@
 }
 
 @media only screen and (max-width: 800px) {
-  .admin-user{
+  .admin-user {
     display: none;
   }
   .icon-logo {
     margin-right: 35px;
   }
+}
+
+.rotate-clockwise {
+  transition: transform 0.3s ease-in-out;
+  transform: rotate(180deg); /* Rotate 180 degrees (half turn) */
+}
+
+.rotate-counterclockwise {
+  transition: transform 0.3s ease-in-out;
+  transform: rotate(0deg); /* Rotate back to 0 degrees */
 }
