--- a/src/css/receipt.css
+++ b/src/css/receipt.css
@@ -1,3 +1,5 @@
+/** @format */
+
 .Page {
   margin-top: 100px; /* Adjust the value as needed */
 }
@@ -11,13 +13,6 @@
   padding: 10px;
   width: 450px;
   height: 600px;
-  border: 1px solid #adadad;
-}
-
-@media (max-width: 500px) {
-  .whole-receipt{
-    display: none;
-  }
 }
 
 /* Header text and logo container */
@@ -125,7 +120,7 @@
 }
 
 .receipt-table td.unit {
-  width: 10%; 
+  width: 10%;
   padding: 3px;
 }
 
@@ -135,12 +130,12 @@
 }
 
 .receipt-table td.price {
-  width: 20%; 
+  width: 20%;
   padding: 3px;
 }
 
 .receipt-table td.amount {
-  width: 20%; 
+  width: 20%;
   padding: 3px;
 }
 
@@ -226,7 +221,7 @@
 /* Custom button styling */
 .custom-button {
   margin-top: 10px;
-  background-color: #50C878;
+  background-color: #50c878;
   color: white;
   padding: 10px 20px;
   border: none;
