--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -5,9 +5,9 @@ nav {
   z-index: 2;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  /* height: 100vh; */
   /* background-color: #000; */
-  padding: 4rem 1rem 1rem 1rem;
+  /* padding: 4rem 1rem 1rem 1rem; */
 }
 
 .navbar {
@@ -44,6 +44,12 @@ nav {
 .active-link {
   background-color: #4d4f55;
   color: #000;
+}
+
+.active-link-foot {
+  background-color: #4d4f55;
+  color: #ffffff;
+  padding: 10px;
 }
 
 .nav-link:hover {
