--- a/src/css/topbar.css
+++ b/src/css/topbar.css
@@ -1,5 +1,44 @@
 /** @format */
 
+.poppins-font {
+  font-family: "Poppins", sans-serif;
+}
+@media only screen and (max-width: 600px) {
+  .mobile-nav {
+    display: flex;
+    align-items: center;
+    background-color: #512615;
+    width: 100%;
+    height: 50px;
+    display: none;
+    margin-top: 4.2rem;
+  }
+
+  .mobile-nav-btn {
+    color: #fff;
+    background: transparent;
+    outline: none;
+    border: none;
+    top: 100px;
+    margin: 120px 15px;
+  }
+  .logo-title {
+    margin-left: 20%;
+  }
+  .icon-logo {
+    margin-right: 35px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .admin-user {
+    display: none;
+  }
+  .icon-logo {
+    margin-right: 35px;
+  }
+}
+
 .rotate-clockwise {
   transition: transform 0.3s ease-in-out;
   transform: rotate(180deg); /* Rotate 180 degrees (half turn) */
