--- a/src/css/sorter.css
+++ b/src/css/sorter.css
@@ -34,10 +34,13 @@
   background-color: #f2f2f2;
   font-size: 16px;
   color: #333;
+  text-align: center;
 }
 
 .sort-table td {
   padding: 12px;
+  text-align: center;
+
   /* padding-left: 22px; */
 }
 
