--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -43,7 +43,7 @@
   height: 200px;
   border-radius: 50%;
   border: 2px solid #494949;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   /* display: flex;
   flex-direction: column; */
   /* align-items: center;
