--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -73,7 +73,7 @@ nav {
   } */
 }
 
-@media only screen and (max-width: 10px) {
+@media only screen and (max-width: 500px) {
   .mobile-nav {
     display: flex;
     align-items: center;
@@ -85,6 +85,13 @@ nav {
   }
 
   .nav-btn {
+    display: none;
+  }
+  
+}
+
+@media only screen and (max-width: 640px) {
+  .collapsed {
     display: none;
   }
 }
