--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -2,37 +2,18 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
-/* .App{ 
-  width: 100%;
-  height: 100%;
-  background-color: #d4d4d4;
-} */
-
-/* Dashboard Text */
-.dashboard-title {
-  font-size: 32px;
-  font-weight: bold;
-  margin-top: 60px;
-  font-family: "Poppins", sans-serif;
-}
-
-/* title of the box */
 .data-title {
   font-size: 24px;
   font-family: "Poppins", sans-serif;
 }
 
-/* kilos or pieces */
 .data-size {
   font-size: 24px;
   font-weight: bold;
-  /* color: #7f1f19; */
   font-family: "Poppins", sans-serif;
 }
-/* Boxes */
 .grid-item {
   border-radius: 25px;
-  /* background-color: white; */
   text-align: center;
   transition: background-color 0.3s;
 }
@@ -41,35 +22,7 @@
   background-color: #c4a484;
 }
 
-/* Media query for small screens */
-@media (max-width: 640px) {
-  .grid-item {
-    /* Adjust styles for smaller screens */
-  }
-  .data-title {
-    font-size: 24px; /* Adjust the font size for smaller screens */
-  }
-
-  .data-size {
-    font-size: 32px; /* Adjust the font size for smaller screens */
-  }
-  .sm\:ml-64 {
-    margin-left: 14rem;
-  }
-}
-
-/* Media query for small screens */
-@media (max-width: 400px) {
-  .data-title {
-    font-size: 18px; /* Adjust the font size for smaller screens */
-  }
-
-  .data-size {
-    font-size: 20px; /* Adjust the font size for smaller screens */
-  }
-}
-
 .content-shift-right {
   margin-left: 100px;
-  transition: margin-left 10.1s ease; /* Apply a smooth transition effect */
+  transition: margin-left 10.1s ease;
 }
