--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body {
-  background-color: #d4d4d4;
+  /* background-color: #d4d4d4; */
   max-width: 100%;
   overflow-x: hidden;
 }
