--- a/src/css/customer.css
+++ b/src/css/customer.css
@@ -90,7 +90,7 @@
 .customers-table th {
   position: sticky;
   top: 0;
-  background-color: #B77D67;
+  background-color: #74574D;
   color: white;
   font-weight: bold;
   text-align: center;
